top and left navigation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 <body>
 
     <div id="navbar-container" class="collapse show"></div>
+    <div id="body-container" class="h-100 d-flex position-relative">
+        <div id="left-nav-panel" class="collapse collapse-horizontal show">
+        </div>
+        <div id="main-container">
+          <div id="content-container">
+          </div>
+          
+        </div>
+      </div>
+
+      <footer class="px-3 py-2 border-top bg-white text-dark small">Version TBD | Copyright © 1999-2022 The Reporting Hub All Rights Reserved.</footer>
 
 </body>
 <!-- bootstrap scripts  -->
@@ -31,5 +42,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <!-- top nav  -->
 <script src="js/top-nav.js"></script>
+<script src="js/left-nav.js"></script>
+
 
 </html>
