--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <!-- top nav  -->
 <script src="js/top-nav.js"></script>
 <script src="js/left-nav.js"></script>
+<script src="js/quick-links.js"></script>
 
 
 </html>
