--- a/index.html
+++ b/index.html
@@ -2,48 +2,102 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reporting Hub App v2</title>
-    <!-- google fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <!-- bootstrap css  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- font awesome  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- custom styles  -->
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reporting Hub App v2</title>
+  <!-- google fonts  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <!-- bootstrap css  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- font awesome  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- custom styles  -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
-    <div id="navbar-container" class="collapse show"></div>
-    <div id="body-container" class="h-100 d-flex position-relative">
-        <div id="left-nav-panel" class="collapse collapse-horizontal show">
-        </div>
-        <div id="main-container">
-          <div id="content-container">
-          </div>
-          
+  <div id="navbar-container" class="collapse show"></div>
+  <div id="body-container" class="h-100 d-flex position-relative">
+    <div id="left-nav-panel" class="collapse collapse-horizontal show">
+    </div>
+    <div id="main-container">
+      <div id="content-container">
+        <div id="content-tabs" class="m-3">
+          <h4 class="fw-bold">CEO Weekly Update</h4>
+          <h6>Sales objectives & key results</h6>
         </div>
       </div>
+      <div id="tabs-container" class="pt-3">
+        <div id="status-updates" class="mx-2 row row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-      <footer class="px-3 py-2 border-top bg-white text-dark small">Version TBD | Copyright © 1999-2022 The Reporting Hub All Rights Reserved.</footer>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
+  <footer class="px-3 py-2 border-top bg-white text-dark small">Version TBD | Copyright © 1999-2022 The Reporting Hub
+    All Rights Reserved.</footer>
 
 </body>
 <!-- bootstrap scripts  -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<!-- charts js  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"
+  integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- top nav  -->
 <script src="js/top-nav.js"></script>
 <script src="js/left-nav.js"></script>
 <script src="js/quick-links.js"></script>
+<script src="js/app-dashboard.js"></script>
+<script src="js/charts.js"></script>
 
 
 </html>
