--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- google fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- bootstrap css  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -35,39 +35,8 @@
         </div>
       </div>
       <div id="tabs-container" class="pt-3">
-        <div id="status-updates" class="mx-2 row row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-          <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <div class="h6 fw-bold text-dark d-flex align-items-center">Test
-                </div>
-              </div>
-            </div>
-          </div>
+        <div id="status-updates" class="mx-2 row row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
+          <!-- adding status updates  -->
         </div>
 
       </div>
@@ -89,14 +58,13 @@
 <!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <!-- charts js  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"
-  integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.min.js"></script>
 <!-- top nav  -->
 <script src="js/top-nav.js"></script>
 <script src="js/left-nav.js"></script>
 <script src="js/quick-links.js"></script>
 <script src="js/app-dashboard.js"></script>
+<script src="js/status-update.js"></script>
 <script src="js/charts.js"></script>
 
 
