added more widgets

--- a/index.html
+++ b/index.html
@@ -35,8 +35,108 @@
         </div>
       </div>
       <div id="tabs-container" class="pt-3">
-        <div id="status-updates" class="mx-2 row row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
+        <div id="status-updates" class="mx-2 mb-3 row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
           <!-- adding status updates  -->
+        </div>
+        <div class="row mx-2 mb-3 g-3">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="fw-bold pb-3">Online Top Search
+                </h5>
+                <div class="mx-2 mb-3 row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+                  <div class="col">
+                    <img class="pb-3" src="img/v-5.svg">
+                    <h6 class="text-muted fw-bold small">Search Users
+                    </h6>
+                    <h4 class="mb-0 fw-bold">12,321
+                    </h4>
+                  </div>
+                  <div class="col">
+                    <img class="pb-3" src="img/v-5.svg">
+                    <h6 class="text-muted fw-bold small">Per Capita Search
+                    </h6>
+                    <h4 class="mb-0 fw-bold">2.7
+                    </h4>
+                  </div>
+                </div>
+                <div class="add-table">
+                  <div class="mx-2 mb-3 row row-cols-md-5 g-3">
+                    <div class="col pb-2 border-bottom fw-bold">#</div>
+                    <div class="col pb-2 border-bottom fw-bold">First</div>
+                    <div class="col pb-2 border-bottom fw-bold">Last</div>
+                    <div class="col pb-2 border-bottom fw-bold">Sales</div>
+                    <div class="col pb-2 border-bottom fw-bold">Date</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="fw-bold pb-3">Online Top Search
+                </h5>
+                <div class="mx-2 mb-3 row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+                  <div class="col">
+                    <img class="pb-3" src="img/v-5.svg">
+                    <h6 class="text-muted fw-bold small">Search Users
+                    </h6>
+                    <h4 class="mb-0 fw-bold">12,321
+                    </h4>
+                  </div>
+                  <div class="col">
+                    <img class="pb-3" src="img/v-5.svg">
+                    <h6 class="text-muted fw-bold small">Per Capita Search
+                    </h6>
+                    <h4 class="mb-0 fw-bold">2.7
+                    </h4>
+                  </div>
+                </div>
+                <div class="add-table">
+                  <div class="mx-2 mb-3 row row-cols-md-5 g-3">
+                    <div class="col pb-2 border-bottom fw-bold">#</div>
+                    <div class="col pb-2 border-bottom fw-bold">First</div>
+                    <div class="col pb-2 border-bottom fw-bold">Last</div>
+                    <div class="col pb-2 border-bottom fw-bold">Sales</div>
+                    <div class="col pb-2 border-bottom fw-bold">Date</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                    <div class="col pb-2 border-bottom">1</div>
+                    <div class="col pb-2 border-bottom">Mark</div>
+                    <div class="col pb-2 border-bottom">Otto</div>
+                    <div class="col pb-2 border-bottom">$12,000</div>
+                    <div class="col pb-2 border-bottom">1/30/2023</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
