--- a/index.html
+++ b/index.html
@@ -61,28 +61,6 @@
                   </div>
                 </div>
                 <div class="add-table">
-                  <div class="mx-2 mb-3 row row-cols-md-5 g-3">
-                    <div class="col pb-2 border-bottom fw-bold">#</div>
-                    <div class="col pb-2 border-bottom fw-bold">First</div>
-                    <div class="col pb-2 border-bottom fw-bold">Last</div>
-                    <div class="col pb-2 border-bottom fw-bold">Sales</div>
-                    <div class="col pb-2 border-bottom fw-bold">Date</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -110,28 +88,6 @@
                   </div>
                 </div>
                 <div class="add-table">
-                  <div class="mx-2 mb-3 row row-cols-md-5 g-3">
-                    <div class="col pb-2 border-bottom fw-bold">#</div>
-                    <div class="col pb-2 border-bottom fw-bold">First</div>
-                    <div class="col pb-2 border-bottom fw-bold">Last</div>
-                    <div class="col pb-2 border-bottom fw-bold">Sales</div>
-                    <div class="col pb-2 border-bottom fw-bold">Date</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                    <div class="col pb-2 border-bottom">1</div>
-                    <div class="col pb-2 border-bottom">Mark</div>
-                    <div class="col pb-2 border-bottom">Otto</div>
-                    <div class="col pb-2 border-bottom">$12,000</div>
-                    <div class="col pb-2 border-bottom">1/30/2023</div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -165,6 +121,7 @@
 <script src="js/quick-links.js"></script>
 <script src="js/app-dashboard.js"></script>
 <script src="js/status-update.js"></script>
+<script src="js/add-table.js"></script>
 <script src="js/charts.js"></script>
 
 
